--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
-cmake_minimum_required(VERSION 2.8.12)
-project(hook C)
-set(PROJECT_VERSION_MAJOR 0)
-set(PROJECT_VERSION_MINOR 1)
-set(PROJECT_VERSION_PATCH 0)
+cmake_minimum_required(VERSION 3.0)
+
+project(hook VERSION 0.1.0 LANGUAGES C)
 
 set(BINARY_DIR ${CMAKE_BINARY_DIR}/../bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR}) 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_DIR}) 
 
-add_executable(hook 
+add_executable(${PROJECT_NAME} 
   src/chunk.c
   src/compiler.c
   src/disasm.c
@@ -16,9 +14,12 @@ add_executable(hook
   src/main.c
   src/memory.c
   src/scanner.c
-  src/stack.c
   src/string.c
   src/vm.c)
+
+if(NOT MSVC)
+  target_link_libraries(${PROJECT_NAME} m)
+endif(NOT MSVC)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
