--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,14 @@ cmake_minimum_required(VERSION 3.0)
 project(hook VERSION 0.1.0 LANGUAGES C)
 
 set(CMAKE_C_STANDARD 99)
+
 set(BINARY_DIR ${CMAKE_BINARY_DIR}/../bin)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}) 
+if(MSVC)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR})
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_DIR})
+else(MSVC)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR})
+endif(MSVC)
 
 add_executable(${PROJECT_NAME} 
   src/array.c
