--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,40 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-
-    runs-on: ${{ matrix.os }}
-
+  ubuntu-build:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build
-
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug
     - name: Build
       run: cmake --build ${{github.workspace}}/build
+    - name: Running tests
+      run: bin/hook examples/bubble-sort.hook
+    - name: Code coverage
+      run: |
+        gcov src/*.c
+        pip install --user cpp-coveralls
+        coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+      env:
+        COVERALLS_REPO_TOKEN: emp8JVF6A1owWTtUCJSnNzz5NylPeihGv
+
+  windows-build:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build
+
+  macos-build:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build
+    - name: Running tests
+      run: bin/hook examples/bubble-sort.hook
