--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 project(hook VERSION 0.1.0 LANGUAGES C)
 
-set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -fsanitize=address -fprofile-arcs -ftest-coverage")
 
 if(NOT MSVC)
@@ -20,7 +19,7 @@ endif(MSVC)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-add_executable(${PROJECT_NAME} 
+add_executable(${PROJECT_NAME}
   src/array.c
   src/builtin.c
   src/callable.c
