--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         gcov src/*.c
         pip install --user cpp-coveralls
-        coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+        coveralls --exclude build --gcov-options '\-lp'
       env:
         COVERALLS_REPO_TOKEN: emp8JVF6A1owWTtUCJSnNzz5NylPeihGv
 
