--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         pip install --user cpp-coveralls
         coveralls --exclude build --gcov-options '\-lp'
       env:
-        COVERALLS_REPO_TOKEN: 5tdMY6UwXmx6gIhurNeOe4tnYNaTKpSIr
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
   windows-build:
     runs-on: windows-latest
