--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,9 @@ jobs:
     - name: Code coverage
       run: |
         gcov src/*.c
-        pip install --user cpp-coveralls
-        coveralls --exclude build --gcov-options '\-lp'
+        bash <(curl -s https://codecov.io/bash)
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   windows-build:
     runs-on: windows-latest
