packing for release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ endif(NOT MSVC)
 
 set(BINARY_DIR ${CMAKE_BINARY_DIR}/../bin)
 set(LIBRARY_DIR ${CMAKE_BINARY_DIR}/../lib)
+set(PACKAGE_DIR ${CMAKE_BINARY_DIR}/../package)
 
 if(MSVC)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR})
@@ -133,4 +134,35 @@ add_library(sqlite SHARED
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+
+set(fmt TGZ)
+if(WIN32)
+  set(fmt ZIP)
+endif()
+set(CPACK_GENERATOR ${fmt})
+set(CPACK_SOURCE_GENERATOR ${fmt})
+
+set(CPACK_OUTPUT_FILE_PREFIX ${PACKAGE_DIR})
+set(CPACK_PACKAGE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
+string(TOLOWER "${PROJECT_NAME}" project)
+string(TOLOWER "${CMAKE_SYSTEM_NAME}" sys)
+string(TOLOWER "${CMAKE_HOST_SYSTEM_PROCESSOR}" arch)
+
+set(CPACK_PACKAGE_FILE_NAME "${project}-${PROJECT_VERSION}-${sys}-${arch}")
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${project}-${PROJECT_VERSION}")
+
+file(READ ${CMAKE_CURRENT_LIST_DIR}/.cpack_ignore cpack_ignore)
+string(REGEX REPLACE "\n" ";" cpack_ignore ${cpack_ignore})
+set(CPACK_SOURCE_IGNORE_FILES "${cpack_ignore}")
+
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+
+install(DIRECTORY bin/ DESTINATION bin)
+install(DIRECTORY example/ DESTINATION example)
+install(DIRECTORY lib/ DESTINATION lib)
+install(FILES ${CPACK_RESOURCE_FILE_README} ${CPACK_RESOURCE_FILE_LICENSE}
+  DESTINATION docs)
+
 include(CPack)
