--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
         bash <(curl -s https://codecov.io/bash)
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    - name: Packing
+      run: |
+        cpack --config build/CPackConfig.cmake
+        cpack --config build/CPackSourceConfig.cmake
 
   windows-build:
     runs-on: windows-latest
@@ -35,6 +39,10 @@ jobs:
       run: cmake -B ${{github.workspace}}/build
     - name: Build
       run: cmake --build ${{github.workspace}}/build
+    - name: Packing
+      run: |
+        cpack --config build/CPackConfig.cmake
+        cpack --config build/CPackSourceConfig.cmake
 
   macos-build:
     runs-on: macos-latest
@@ -48,3 +56,7 @@ jobs:
       run: ./run-tests
       env:
         HOOK_HOME: ${{github.workspace}}
+    - name: Packing
+      run: |
+        cpack --config build/CPackConfig.cmake
+        cpack --config build/CPackSourceConfig.cmake
