replaced require() by use declaration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(${PROJECT_NAME}
   src/error.c
   src/fs.c
   src/hash.c
+  src/library.c
   src/main.c
   src/memory.c
   src/scanner.c
@@ -61,6 +62,7 @@ add_library(math SHARED
   src/compiler.c
   src/error.c
   src/hash.c
+  src/library.c
   src/math.c
   src/memory.c
   src/scanner.c
@@ -78,6 +80,7 @@ add_library(os SHARED
   src/compiler.c
   src/error.c
   src/hash.c
+  src/library.c
   src/memory.c
   src/os.c
   src/scanner.c
@@ -96,6 +99,7 @@ add_library(io SHARED
   src/error.c
   src/hash.c
   src/io.c
+  src/library.c
   src/memory.c
   src/scanner.c
   src/string.c
@@ -110,6 +114,7 @@ add_library(strings SHARED
   src/chunk.c
   src/error.c
   src/hash.c
+  src/library.c
   src/memory.c
   src/string.c
   src/strings.c
@@ -129,6 +134,7 @@ add_library(sqlite SHARED
   src/chunk.c
   src/error.c
   src/hash.c
+  src/library.c
   src/memory.c
   src/sqlite.c
   src/string.c
@@ -144,6 +150,7 @@ add_library(url SHARED
   src/url.c
   src/error.c
   src/hash.c
+  src/library.c
   src/memory.c
   src/string.c
   src/struct.c
