--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Installing dependencies
       run: |
+        sudo apt-get update -y
         sudo apt-get install -y libcurl4-openssl-dev
+        sudo apt-get install -y libhiredis-dev
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
@@ -48,6 +50,7 @@ jobs:
         vcpkg integrate install
         vcpkg install sqlite3:x64-windows
         vcpkg install curl:x64-windows
+        vcpkg install hiredis:x64-windows
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
@@ -74,6 +77,12 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Installing dependencies
+      run: |
+        git clone https://github.com/redis/hiredis.git
+        cd hiredis
+        make
+        sudo make install
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
