--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
       uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ${{ github.workspace }}/package/*.zip
+        asset_path: ${{ github.workspace }}/package/*.tar.gz
         overwrite: true
     - name: Cleaning
       run: |
