added module hashing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,9 +38,9 @@ add_executable(${PROJECT_NAME}
   src/error.c
   src/fs.c
   src/hash.c
-  src/module.c
   src/main.c
   src/memory.c
+  src/module.c
   src/scanner.c
   src/string.c
   src/struct.c
@@ -67,9 +67,9 @@ add_library(math SHARED
   src/compiler.c
   src/error.c
   src/hash.c
-  src/module.c
   src/math.c
   src/memory.c
+  src/module.c
   src/scanner.c
   src/string.c
   src/struct.c
@@ -86,8 +86,8 @@ add_library(os SHARED
   src/compiler.c
   src/error.c
   src/hash.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/os.c
   src/scanner.c
   src/string.c
@@ -106,8 +106,8 @@ add_library(io SHARED
   src/error.c
   src/hash.c
   src/io.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/scanner.c
   src/string.c
   src/struct.c
@@ -122,8 +122,8 @@ add_library(strings SHARED
   src/common.c
   src/error.c
   src/hash.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/string.c
   src/strings.c
   src/struct.c
@@ -139,8 +139,8 @@ add_library(arrays SHARED
   src/common.c
   src/error.c
   src/hash.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/string.c
   src/struct.c
   src/userdata.c
@@ -160,8 +160,8 @@ add_library(sqlite SHARED
   src/common.c
   src/error.c
   src/hash.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/sqlite.c
   src/string.c
   src/struct.c
@@ -176,8 +176,8 @@ add_library(url SHARED
   src/common.c
   src/error.c
   src/hash.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/string.c
   src/struct.c
   src/url.c
@@ -192,9 +192,27 @@ add_library(redis SHARED
   src/common.c
   src/error.c
   src/hash.c
-  src/module.c
   src/memory.c
+  src/module.c
   src/redis.c
+  src/string.c
+  src/struct.c
+  src/userdata.c
+  src/value.c
+  src/vm.c)
+
+  add_library(hashing SHARED
+  src/array.c
+  src/callable.c
+  src/chunk.c
+  src/common.c
+  src/error.c
+  src/hash.c
+  src/hashing.c
+  src/memory.c
+  src/module.c
+  src/ripemd160.c
+  src/sha2.c
   src/string.c
   src/struct.c
   src/userdata.c
