--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -9,7 +9,7 @@ add_library(math SHARED
   ../src/hook_builtin.c
   ../src/hook_callable.c
   ../src/hook_chunk.c
-  ../src/hook_common.c
+  ../src/hook_utils.c
   ../src/hook_compiler.c
   ../src/hook_error.c
   ../src/hook_hash.c
@@ -31,7 +31,7 @@ add_library(os SHARED
   ../src/hook_builtin.c
   ../src/hook_callable.c
   ../src/hook_chunk.c
-  ../src/hook_common.c
+  ../src/hook_utils.c
   ../src/hook_compiler.c
   ../src/hook_error.c
   ../src/hook_hash.c
@@ -53,7 +53,7 @@ add_library(io SHARED
   ../src/hook_builtin.c
   ../src/hook_callable.c
   ../src/hook_chunk.c
-  ../src/hook_common.c
+  ../src/hook_utils.c
   ../src/hook_compiler.c
   ../src/hook_error.c
   ../src/hook_hash.c
@@ -75,7 +75,7 @@ add_library(strings SHARED
   ../src/hook_builtin.c
   ../src/hook_callable.c
   ../src/hook_chunk.c
-  ../src/hook_common.c
+  ../src/hook_utils.c
   ../src/hook_error.c
   ../src/hook_hash.c
   ../src/hook_iterator.c
@@ -96,7 +96,7 @@ add_library(arrays SHARED
   ../src/hook_builtin.c
   ../src/hook_callable.c
   ../src/hook_chunk.c
-  ../src/hook_common.c
+  ../src/hook_utils.c
   ../src/hook_error.c
   ../src/hook_hash.c
   ../src/hook_iterator.c
