--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(math SHARED
   ../src/hook_compiler.c
   ../src/hook_error.c
   ../src/hook_hash.c
+  ../src/hook_iterable.c
   ../src/hook_iterator.c
   hook_math.c
   ../src/hook_memory.c
@@ -35,6 +36,7 @@ add_library(os SHARED
   ../src/hook_compiler.c
   ../src/hook_error.c
   ../src/hook_hash.c
+  ../src/hook_iterable.c
   ../src/hook_iterator.c
   ../src/hook_memory.c
   ../src/hook_module.c
@@ -58,6 +60,7 @@ add_library(io SHARED
   ../src/hook_error.c
   ../src/hook_hash.c
   hook_io.c
+  ../src/hook_iterable.c
   ../src/hook_iterator.c
   ../src/hook_memory.c
   ../src/hook_module.c
@@ -78,6 +81,7 @@ add_library(strings SHARED
   ../src/hook_utils.c
   ../src/hook_error.c
   ../src/hook_hash.c
+  ../src/hook_iterable.c
   ../src/hook_iterator.c
   ../src/hook_memory.c
   ../src/hook_module.c
@@ -99,6 +103,7 @@ add_library(arrays SHARED
   ../src/hook_utils.c
   ../src/hook_error.c
   ../src/hook_hash.c
+  ../src/hook_iterable.c
   ../src/hook_iterator.c
   ../src/hook_memory.c
   ../src/hook_module.c
