--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         sudo apt-get update -y
         sudo apt-get install -y libcurl4-openssl-dev
         sudo apt-get install -y libhiredis-dev
+        sudo apt-get install -y libmysqlclient-dev
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
@@ -52,6 +53,7 @@ jobs:
         vcpkg install sqlite3:x64-windows
         vcpkg install curl:x64-windows
         vcpkg install hiredis:x64-windows
+        vcpkg install libmysql:x64-windows
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg-2022.02.23/scripts/buildsystems/vcpkg.cmake
@@ -84,6 +86,7 @@ jobs:
         cd hiredis
         make
         sudo make install
+        brew install mysql-connector-c
     - name: Configure CMake
       run: |
         cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=Release
